Update target JDK to 11 and move to JakartaEE 9 (#67)
Co-authored-by: Valery Kharseko <vharseko@3a-systems.ru>