@@ -28,7 +28,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.openidentityplatform</groupId>
     <artifactId>openicf</artifactId>
-    <version>1.8.1-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>OpenICF</name>
     <description>
@@ -38,8 +38,8 @@
     <inceptionYear>2018</inceptionYear>
     <url>https://github.com/OpenIdentityPlatform/OpenICF</url>
     <properties>
-        <maven.compiler.target>8</maven.compiler.target>
-        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.surefire.options />
    	</properties>
@@ -156,30 +156,6 @@
             </build>
         </profile>
         <profile>
-            <id>set-compiler-release</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <configuration>
-                                <fork>true</fork>
-                                <release>8</release>
-                                <compilerArgs>
-                                    <arg>-XDignore.symbol.file</arg>
-                                    <arg>-Xlint:unchecked</arg>
-                                </compilerArgs>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-        <profile>
             <id>jdk17.options</id>
             <activation>
                 <jdk>[17,)</jdk>
@@ -201,7 +177,7 @@
             <dependency>
                 <groupId>org.openidentityplatform.opendj</groupId>
                 <artifactId>opendj-parent</artifactId>
-                <version>4.10.2</version>
+                <version>5.0.0-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -297,6 +273,14 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.13.0</version>
+                    <configuration>
+                        <fork>true</fork>
+                        <release>${maven.compiler.target}</release>
+                        <compilerArgs>
+                            <arg>-XDignore.symbol.file</arg>
+                            <arg>-Xlint:unchecked</arg>
+                        </compilerArgs>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -347,7 +331,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.11.2</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -359,6 +343,9 @@
                 <configuration>
                     <doclint>none</doclint>
                     <encoding>UTF-8</encoding>
+                    <additionalOptions>
+                        <additionalOption>--add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED</additionalOption>
+                    </additionalOptions>
                 </configuration>
             </plugin>
         </plugins>
